[package]
name = "sixql"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = "=0.8.3"
sixel-tokenizer = "0.1.0"
sixel-image = "0.1.0"
plotters = "0.3.4"
sixel-rs = { git = "https://github.com/wrnrlr/sixel-rs.git", rev = "5a9a0f2524800f6d86cf2ebb07225f2695a9e8d2" }
sixel-sys = { version = "0.3.1" }
failure = "0.1.8"

[dev-dependencies]
pgrx-tests = "=0.8.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
